--- a/Inventory.API/appsettings.json
+++ b/Inventory.API/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "SqlConn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=InventoryApiDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "SQLConnection": "Server=172.16.1.52,14333; Database=my_db; User='sa'; Password='1Secure*Password1'; MultipleActiveResultSets=true;Integrated Security=false;TrustServerCertificate=true;"
   }
 }
