--- a/Inventory.API/appsettings.json
+++ b/Inventory.API/appsettings.json
@@ -10,5 +10,10 @@
   "ConnectionStrings": {
     "SqlConn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=InventoryApiDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "SQLConnection": "Server=172.16.1.52,14333; Database=my_db; User='sa'; Password='1Secure*Password1'; MultipleActiveResultSets=true;Integrated Security=false;TrustServerCertificate=true;"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "e9fc6d10-80ac-4eb7-8d23-f2a02ca63d76",
+    "ClientId": "0e862f49-81ad-4099-a76d-2d8dd8db713e"
   }
 }
